fix(entities): single source defaulting to EDS for inherent time filter (#117)
* fix(entities): single source defaulting to EDS for inherent time filter

* fix snyk

* spotless

* refactor

* remove constraint