@@ -1,5 +1,7 @@
 package org.hypertrace.gateway.service.entity.query;
 
+import static java.util.function.Predicate.not;
+import static org.hypertrace.core.attribute.service.v1.AttributeSource.EDS;
 import static org.hypertrace.gateway.service.common.util.ExpressionReader.buildAttributeToSourcesMap;
 
 import com.google.common.collect.Sets;
@@ -11,6 +13,8 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.hypertrace.gateway.service.entity.config.TimestampConfigs;
+import org.hypertrace.gateway.service.v1.entity.EntitiesRequest;
 
 public class ExecutionTreeUtils {
   /**
@@ -22,11 +26,55 @@ public class ExecutionTreeUtils {
    */
   static Optional<String> getSingleSourceForAllAttributes(ExecutionContext executionContext) {
     Optional<String> singleSourceFromKeySets = getSingleSourceFromKeySets(executionContext);
-    if (singleSourceFromKeySets.isPresent()) {
-      return singleSourceFromKeySets;
+
+    Optional<String> singleSourceForAllAttributes =
+        singleSourceFromKeySets.or(
+            () -> getSingleSourceFromAttributeSourceValueSets(executionContext));
+
+    EntitiesRequest entitiesRequest = executionContext.getEntitiesRequest();
+
+    if (singleSourceForAllAttributes.isEmpty()) {
+      return Optional.empty();
     }
 
-    return getSingleSourceFromAttributeSourceValueSets(executionContext);
+    /**
+     * Entities queries usually have an inherent time filter, via {@link
+     * EntitiesRequest#getStartTimeMillis()} and {@link EntitiesRequest#getEndTimeMillis()}.
+     *
+     * <p>The time filter is usually applied on QS, apart from few entity types, which have a
+     * timestamp column specified through timestamp config {@link TimestampConfigs}
+     *
+     * <p>Single source for all attributes doesn't take care of the inherent time filter for the
+     * single source
+     *
+     * <p>If the single source is {@link EDS} and the timestamp column doesn't exist for the
+     * corresponding entity type, the query will be executed on {@link EDS} source, without the
+     * inherent filter, leading to erroneous outputs
+     *
+     * <p>Hence, default to non single source, if
+     *
+     * <ul>
+     *   <li>single source is {@link EDS}
+     *   <li>inherent time filter is valid
+     *   <li>only live entities are requested (since non live entities request ignores the inherent
+     *       time filter anyways)
+     *   <li>timestamp column doesn't exist for the corresponding entity type
+     * </ul>
+     */
+    String singleSource = singleSourceForAllAttributes.get();
+    if (EDS.name().equals(singleSource)
+        && isValidTimeRange(
+            entitiesRequest.getStartTimeMillis(), entitiesRequest.getEndTimeMillis())
+        && !entitiesRequest.getIncludeNonLiveEntities()
+        && TimestampConfigs.getTimestampColumn(entitiesRequest.getEntityType()) == null) {
+      return Optional.empty();
+    }
+
+    return singleSourceForAllAttributes;
+  }
+
+  private static boolean isValidTimeRange(long startTimeMillis, long endTimeMillis) {
+    return startTimeMillis != 0 && endTimeMillis != 0 && startTimeMillis < endTimeMillis;
   }
 
   /**
@@ -75,9 +123,9 @@ public class ExecutionTreeUtils {
     // Compute the intersection of all sources in attributesToSourcesMap and check if it's size is 1
     Set<String> attributeSourcesIntersection =
         executionContext.getAllAttributesToSourcesMap().values().stream()
-            .filter((sourcesSet) -> !sourcesSet.isEmpty())
+            .filter(not(Set::isEmpty))
             .findFirst()
-            .orElse(Set.of());
+            .orElse(Collections.emptySet());
 
     if (attributeSourcesIntersection.isEmpty()) {
       return Optional.empty();
